@@ -62,7 +62,7 @@ if tierZero then
 			localised_name = {"recipe-name.tiberium-centrifuging", {"item-name.tiberium-ore"}},
 			category = "tiberium-centrifuge-0",
 			subgroup = "a-centrifuging",
-			energy_required = 10,
+			energy_required = 4,
 			enabled = false,
 			ingredients = {
 			},
@@ -82,7 +82,7 @@ if tierZero then
 			--localised_name set by DynamicOreRecipes
 			category = "tiberium-centrifuge-0",
 			subgroup = "a-centrifuging",
-			energy_required = 10,
+			energy_required = 4,
 			enabled = false,
 			ingredients = {
 			},
